# docs/swagger.json
@@ -197,7 +197,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resp.CreateActivityResp"
+                                            "$ref": "#/definitions/req.CreateActReq"
                                         }
                                     }
                                 }
@@ -240,7 +240,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/resp.CreateActivityResp"
+                                            "$ref": "#/definitions/model.ActivityDraft"
                                         }
                                     }
                                 }
@@ -895,7 +895,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/resp.Resp"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/resp.Resp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/req.CreatePostReq"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -954,7 +966,7 @@
             }
         },
         "/post/load": {
-            "post": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -972,15 +984,6 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "description": "草稿请求",
-                        "name": "draft",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 ],
                 "responses": {
@@ -1532,6 +1535,56 @@
                 },
                 "likeNum": {
                     "type": "integer"
+                },
+                "position": {
+                    "type": "string"
+                },
+                "registerMethod": {
+                    "type": "string"
+                },
+                "showImg": {
+                    "type": "string"
+                },
+                "signer": {
+                    "type": "string"
+                },
+                "startTime": {
+                    "type": "string"
+                },
+                "studentID": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ActivityDraft": {
+            "type": "object",
+            "properties": {
+                "activeForm": {
+                    "type": "string"
+                },
+                "bid": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "holderType": {
+                    "type": "string"
+                },
+                "ifRegister": {
+                    "type": "string"
+                },
+                "introduce": {
+                    "type": "string"
                 },
                 "position": {
                     "type": "string"
